my code is very mussy so  i've been trying to fix the layout on each section and see what why tools not showing

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -4,6 +4,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Montserrat", sans-serif;
   font-family: "Nunito Sans", sans-serif;
